--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,31 +1,28 @@
 name: Build and Test
-
-on:
-  push:
-  pull_request:
-
-concurrency:
-  group: ${{ github.ref }}
-  cancel-in-progress: true
-
+ 
+on: [push, pull_request]
+ 
 jobs:
   build:
-    runs-on: windows-latest 
-
+    runs-on: ubuntu-latest
+ 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Setup .NET
-        uses: actions/setup-dotnet@v3
-        with:
-          dotnet-version: '8.0.x'
-
-      - name: Restore dependencies
-        run: dotnet restore
-
-      - name: Build
-        run: dotnet build --no-restore
-
-      - name: Run Tests
-        run: dotnet test --no-build --verbosity normal
+    - name: Checkout code
+      uses: actions/checkout@v3
+ 
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v3
+      with:
+        dotnet-version: '8.0.x'
+ 
+    - name: Restore dependencies
+      run: dotnet restore
+ 
+    - name: Build
+      run: dotnet build --no-restore
+ 
+    - name: Check code formatting
+      run: dotnet format --verify-no-changes
+ 
+    - name: Run Tests
+      run: dotnet test --no-build --verbosity normal
