--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -18,8 +18,8 @@ jobs:
           dotnet-version: '8.0.x'
 
       - name: Restore dependencies
-        run: dotnet restore
-
+        run: dotnet restore ModernSoftwareApp/ModernSoftwareApp.csproj
+        
       - name: Build
         run: dotnet build --no-restore
 
