--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -27,4 +27,5 @@ jobs:
         run: dotnet test ModernSoftwareApp/ModernSoftwareApp.csproj --no-build --verbosity normal
       - name: Check code formatting
         run: dotnet format ModernSoftwareApp/ModernSoftwareApp.csproj --verify-no-changes
-
+      - name: Read secret
+        run: echo "Secret value is ${{ secrets.MY_SECRET }}"
